--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,34 +6,34 @@ steps:
       - -c
       - |
         echo "⏳ Checking if selected triggers are running before starting build..."
-        PROJECT_ID=$(gcloud config get-value project)
+        PROJECT_ID=$$(gcloud config get-value project)
 
         # 👇 Specify the triggers you want to wait for
         WATCHED_TRIGGERS=("trigger-1" "trigger-2" "trigger-3")
 
         TIMEOUT=300  # 5 minutes
-        START_TIME=$(date +%s)
+        START_TIME=$$(date +%s)
 
         while true; do
           # Get ongoing builds with trigger name filter
-          RUNNING_BUILDS=$(gcloud builds list --ongoing \
+          RUNNING_BUILDS=$$(gcloud builds list --ongoing \
             --format="value(id,substitutions.TRIGGER_NAME)")
 
           # Filter to only watched triggers
-          MATCHED_BUILDS=$(echo "$RUNNING_BUILDS" | grep -E "$(IFS=\|; echo "${WATCHED_TRIGGERS[*]}")" || true)
+          MATCHED_BUILDS=$$(echo "$$RUNNING_BUILDS" | grep -E "$$(IFS=\|; echo "$${WATCHED_TRIGGERS[*]}")" || true)
 
-          if [[ -z "$MATCHED_BUILDS" ]]; then
+          if [[ -z "$$MATCHED_BUILDS" ]]; then
             echo "✅ None of the watched triggers are running. Proceeding..."
             break
           fi
 
           echo "🔄 Found running builds for watched triggers:"
-          echo "$MATCHED_BUILDS"
+          echo "$$MATCHED_BUILDS"
 
-          CURRENT_TIME=$(date +%s)
-          ELAPSED=$((CURRENT_TIME - START_TIME))
+          CURRENT_TIME=$$(date +%s)
+          ELAPSED=$$((CURRENT_TIME - START_TIME))
 
-          if [[ $ELAPSED -ge $TIMEOUT ]]; then
+          if [[ $$ELAPSED -ge $$TIMEOUT ]]; then
             echo "⚠️ Timeout reached (5 minutes). Proceeding with build anyway..."
             break
           fi
