--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,59 +1,130 @@
 steps:
-  # Step 1: Wait for specific triggers to finish (infinite check)
+  # Step 1: Compare current trigger start time with watched triggers
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     entrypoint: bash
     args:
       - -c
       - |
-        echo "⏳ Checking if selected triggers are running before starting build..."
+        echo "⏳ Checking if this trigger started before other watched triggers..."
 
-        # 👇 List of trigger names to wait for (adjust as needed)
-        WATCHED_TRIGGERS=("trigger-1" "trigger-3")
+        WATCHED_TRIGGERS=("trigger-2" "trigger-3")
+        CURRENT_TRIGGER="$${_TRIGGER_NAME:-unknown-trigger}"
+        echo "ℹ️ Current Trigger: $$CURRENT_TRIGGER"
+
+        # ✅ Fetch current trigger's start time
+        CURRENT_BUILD_ID=$$(gcloud builds list --region=asia-south1 \
+          --filter="substitutions.TRIGGER_NAME=$$CURRENT_TRIGGER" \
+          --sort-by="~createTime" --limit=1 \
+          --format="value(id)")
+        
+        if [[ -z "$$CURRENT_BUILD_ID" ]]; then
+          echo "⚠️ Could not find current build ID. Proceeding with normal wait logic..."
+          SKIP_WAIT="false"
+        else
+          CURRENT_START_TIME=$$(gcloud builds describe $$CURRENT_BUILD_ID --region=asia-south1 \
+            --format="value(createTime)")
+          echo "⏰ Current build $$CURRENT_BUILD_ID started at: $$CURRENT_START_TIME"
+
+          SKIP_WAIT="true" # Assume we skip unless we find older builds
+          for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
+            if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
+              continue
+            fi
+
+            LATEST_BUILD=$$(gcloud builds list --region=asia-south1 \
+              --filter="substitutions.TRIGGER_NAME=$$TRIGGER" \
+              --sort-by="~createTime" --limit=1 \
+              --format="value(id,createTime)")
+            
+            if [[ -n "$$LATEST_BUILD" ]]; then
+              BUILD_ID=$$(echo "$$LATEST_BUILD" | awk '{print $$1}')
+              START_TIME=$$(echo "$$LATEST_BUILD" | awk '{print $$2}')
+              echo "🔎 $$TRIGGER latest build $$BUILD_ID started at: $$START_TIME"
+
+              # Compare times: if any watched trigger started BEFORE current trigger → must wait
+              if [[ "$$START_TIME" < "$$CURRENT_START_TIME" ]]; then
+                echo "⏳ $$TRIGGER started earlier than current build → waiting required."
+                SKIP_WAIT="false"
+              fi
+            fi
+          done
+        fi
+
+        if [[ "$$SKIP_WAIT" == "true" ]]; then
+          echo "✅ Current trigger started earliest → skipping wait logic and continuing pipeline."
+          exit 0
+        fi
+
+        echo "⚠️ Current trigger not earliest → executing wait logic."
+
+        # ---------- WAIT LOGIC STARTS HERE ----------
         TRIGGER_PATTERN="$$(IFS=\|; echo "$${WATCHED_TRIGGERS[*]}")"
 
-        while true; do
-          echo "🔍 Fetching ongoing builds from asia-south1..."
-          ALL_BUILDS=$$(gcloud builds list --region=asia-south1 \
-            --format="value(id,status,substitutions.TRIGGER_NAME)")
+        wait_for_no_running_builds() {
+          while true; do
+            echo "🔍 Checking ongoing builds..."
+            ALL_BUILDS=$$(gcloud builds list --ongoing --region=asia-south1 \
+              --format="value(id,createTime,status,substitutions.TRIGGER_NAME)")
+            RUNNING_BUILDS=$$(echo "$$ALL_BUILDS" | grep -iE "$$TRIGGER_PATTERN" | grep -v "$$CURRENT_TRIGGER" || true)
 
-          RUNNING_BUILDS=$$(echo "$$ALL_BUILDS" | grep -iE "$$TRIGGER_PATTERN" || true)
+            if [[ -z "$$RUNNING_BUILDS" ]]; then
+              echo "✅ No watched triggers running right now. Proceeding..."
+              break
+            fi
 
-          if [[ -z "$$RUNNING_BUILDS" ]]; then
-            echo "✅ None of the watched triggers are running."
+            echo "🔄 Found running builds (excluding current):"
+            echo "$$RUNNING_BUILDS"
+            echo "⏱ Waiting 20 seconds before re-checking..."
+            sleep 20
+          done
+        }
 
-            # ✅ Now check last build status of each watched trigger
-            for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
-              echo "🔎 Checking latest build status for $$TRIGGER..."
-              LATEST_BUILD=$$(gcloud builds list --region=asia-south1 \
-                --filter="substitutions.TRIGGER_NAME=$$TRIGGER" \
-                --sort-by="~createTime" --limit=1 \
-                --format="value(id,status)")
+        wait_for_no_running_builds
 
-              BUILD_ID=$$(echo "$$LATEST_BUILD" | awk '{print $$1}')
-              STATUS=$$(echo "$$LATEST_BUILD" | awk '{print $$2}')
-
-              if [[ -n "$$BUILD_ID" ]]; then
-                echo "➡️  Latest build for $$TRIGGER: $$BUILD_ID ($$STATUS)"
-                if [[ "$$STATUS" == "SUCCESS" ]]; then
-                  echo "✅ $$TRIGGER completed successfully. Waiting 90 seconds before proceeding..."
-                  sleep 90
-                elif [[ "$$STATUS" == "FAILURE" || "$$STATUS" == "CANCELLED" ]]; then
-                  echo "⚠️ $$TRIGGER failed/cancelled. Waiting 30 seconds before proceeding..."
-                  sleep 30
-                else
-                  echo "⏳ $$TRIGGER has an unknown status ($$STATUS). Proceeding without extra wait."
-                fi
-              else
-                echo "ℹ️ No previous build found for $$TRIGGER. Proceeding without wait."
-              fi
-            done
-            break
+        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
+          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
+            continue
           fi
 
-          echo "🔄 Found running builds for watched triggers:"
-          echo "$$RUNNING_BUILDS"
-          echo "⏱ Waiting 20 seconds before checking again..."
-          sleep 20
+          LATEST_BUILD=$$(gcloud builds list --region=asia-south1 \
+            --filter="substitutions.TRIGGER_NAME=$$TRIGGER" \
+            --sort-by="~createTime" --limit=1 \
+            --format="value(id,status,createTime)")
+
+          if [[ -z "$$LATEST_BUILD" ]]; then
+            echo "ℹ️ No previous build for $$TRIGGER. Skipping wait."
+            continue
+          fi
+
+          BUILD_ID=$$(echo "$$LATEST_BUILD" | awk '{print $$1}')
+          STATUS=$$(echo "$$LATEST_BUILD" | awk '{print $$2}')
+          BUILDTIME=$$(echo "$$LATEST_BUILD" | awk '{print $$3}')
+
+          echo "➡️ Latest build for $$TRIGGER: $$BUILD_ID ($$STATUS at $$BUILDTIME)"
+
+          if [[ "$$STATUS" == "WORKING" || "$$STATUS" == "QUEUED" ]]; then
+            echo "⏳ $$TRIGGER build still running. Waiting until it finishes..."
+            while true; do
+              CURRENT_STATUS=$$(gcloud builds describe $$BUILD_ID --region=asia-south1 --format="value(status)")
+              echo "🔄 $$TRIGGER build $$BUILD_ID status: $$CURRENT_STATUS"
+              if [[ "$$CURRENT_STATUS" == "SUCCESS" || "$$CURRENT_STATUS" == "FAILURE" || "$$CURRENT_STATUS" == "CANCELLED" ]]; then
+                STATUS=$$CURRENT_STATUS
+                break
+              fi
+              echo "⏱ Sleeping 15 seconds before checking again..."
+              sleep 15
+            done
+          fi
+
+          if [[ "$$STATUS" == "SUCCESS" ]]; then
+            echo "✅ $$TRIGGER succeeded. Waiting 90 seconds before continuing..."
+            sleep 90
+          elif [[ "$$STATUS" == "FAILURE" || "$$STATUS" == "CANCELLED" ]]; then
+            echo "⚠️ $$TRIGGER failed/cancelled. Waiting 30 seconds before continuing..."
+            sleep 30
+          fi
+
+          wait_for_no_running_builds
         done
 
   # Step 2: Docker Build
@@ -76,3 +147,5 @@ steps:
 timeout: 1200s
 options:
   logging: CLOUD_LOGGING_ONLY
+substitutions:
+  _TRIGGER_NAME: "$TRIGGER_NAME"
