--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,4 @@
 steps:
-  # Step 1: Trigger Coordination and Wait Logic
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     entrypoint: bash
     args:
@@ -7,146 +6,106 @@ steps:
       - |
         echo "⏳ Checking current trigger against watched triggers..."
 
-        WATCHED_TRIGGERS=("trigger-1" "trigger-3")
-        CURRENT_TRIGGER="${_TRIGGER_NAME:-trigger-2}"
-        echo "ℹ️ Current Trigger: $CURRENT_TRIGGER"
+        WATCHED_TRIGGERS=("trigger-1" "trigger-2" "trigger-3")
+        CURRENT_TRIGGER="$${_TRIGGER_NAME:-trigger-2}"
+        echo "ℹ️ Current Trigger: $$CURRENT_TRIGGER"
 
-        # Get current trigger build info
-        CURRENT_BUILD_INFO=$(gcloud builds list --region=asia-south1 \
-          --filter="substitutions.TRIGGER_NAME=$CURRENT_TRIGGER" \
+        # Fetch current build ID and start time
+        CURRENT_BUILD_INFO=$$(gcloud builds list --region=asia-south1 \
+          --filter="substitutions.TRIGGER_NAME=$$CURRENT_TRIGGER" \
           --sort-by="~createTime" --limit=1 \
-          --format="value(id,createTime,status)")
+          --format="value(id,createTime)")
+        CURRENT_BUILD_ID=$$(echo "$$CURRENT_BUILD_INFO" | awk '{print $$1}')
+        CURRENT_START_TIME=$$(echo "$$CURRENT_BUILD_INFO" | awk '{print $$2}')
+        echo "⏰ Current build $$CURRENT_BUILD_ID started at: $$CURRENT_START_TIME"
 
-        CURRENT_BUILD_ID=$(echo "$CURRENT_BUILD_INFO" | awk '{print $1}')
-        CURRENT_START_TIME=$(echo "$CURRENT_BUILD_INFO" | awk '{print $2}')
-        CURRENT_EPOCH=$(date -d "$CURRENT_START_TIME" +%s)
-
-        if [[ -z "$CURRENT_BUILD_ID" ]]; then
-          echo "⚠️ Could not find current build ID. Will continue normal flow."
-        fi
-
-        # Check if any watched trigger started earlier and is still running
-        SHOULD_WAIT=false
-        for TRIGGER in "${WATCHED_TRIGGERS[@]}"; do
-          if [[ "$TRIGGER" == "$CURRENT_TRIGGER" ]]; then
+        # Check if current trigger started earlier than all others
+        SKIP_WAIT="true"
+        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
+          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
             continue
           fi
-
-          LATEST_BUILD=$(gcloud builds list --region=asia-south1 \
-            --filter="substitutions.TRIGGER_NAME=$TRIGGER" \
+          LATEST_BUILD=$$(gcloud builds list --region=asia-south1 \
+            --filter="substitutions.TRIGGER_NAME=$$TRIGGER" \
             --sort-by="~createTime" --limit=1 \
             --format="value(id,createTime,status)")
-
-          if [[ -z "$LATEST_BUILD" ]]; then
-            continue
-          fi
-
-          BUILD_ID=$(echo "$LATEST_BUILD" | awk '{print $1}')
-          START_TIME=$(echo "$LATEST_BUILD" | awk '{print $2}')
-          STATUS=$(echo "$LATEST_BUILD" | awk '{print $3}')
-          TRIGGER_EPOCH=$(date -d "$START_TIME" +%s)
-
-          echo "🔎 $TRIGGER latest build $BUILD_ID started at $START_TIME ($STATUS)"
-
-          if [[ "$TRIGGER_EPOCH" -lt "$CURRENT_EPOCH" && ( "$STATUS" == "WORKING" || "$STATUS" == "QUEUED" ) ]]; then
-            echo "⏳ $TRIGGER started earlier than current build and is still running → waiting required."
-            SHOULD_WAIT=true
+          if [[ -n "$$LATEST_BUILD" ]]; then
+            OTHER_START=$$(echo "$$LATEST_BUILD" | awk '{print $$2}')
+            if [[ "$$OTHER_START" < "$$CURRENT_START_TIME" ]]; then
+              SKIP_WAIT="false"
+              break
+            fi
           fi
         done
 
-        if [[ "$SHOULD_WAIT" == false ]]; then
+        if [[ "$$SKIP_WAIT" == "true" ]]; then
           echo "✅ Current trigger started earliest → skipping wait logic."
           exit 0
         fi
 
-        echo "⚠️ Waiting for earlier triggers to complete..."
+        echo "⚠️ Current trigger not earliest → executing wait logic for earlier triggers..."
 
-        # Function to wait until no watched triggers (excluding current) are running
-        wait_for_no_running_builds() {
+        wait_for_build() {
+          local TRIGGER_NAME=$$1
+          local BUILD_ID=$$2
           while true; do
-            ALL_BUILDS=$(gcloud builds list --ongoing --region=asia-south1 \
-              --format="value(id,createTime,status,substitutions.TRIGGER_NAME)")
-            RUNNING_BUILDS=$(echo "$ALL_BUILDS" | grep -iE "$(IFS=\|; echo "${WATCHED_TRIGGERS[*]}")" | grep -v "$CURRENT_TRIGGER" || true)
-
-            if [[ -z "$RUNNING_BUILDS" ]]; then
-              echo "✅ No earlier watched triggers running. Proceeding..."
+            STATUS=$$(gcloud builds describe $$BUILD_ID --region=asia-south1 --format="value(status)")
+            if [[ "$$STATUS" == "SUCCESS" || "$$STATUS" == "FAILURE" || "$$STATUS" == "CANCELLED" ]]; then
+              echo "🔹 $$TRIGGER_NAME build $$BUILD_ID finished with $$STATUS"
               break
             fi
-
-            echo "🔄 Found running builds (excluding current):"
-            echo "$RUNNING_BUILDS"
-            echo "⏱ Waiting 20 seconds..."
-            sleep 20
+            echo "⏱ $$TRIGGER_NAME build $$BUILD_ID still running, waiting 15s..."
+            sleep 15
           done
-        }
-
-        wait_for_no_running_builds
-
-        # Step: Check status of each watched trigger and wait accordingly
-        for TRIGGER in "${WATCHED_TRIGGERS[@]}"; do
-          if [[ "$TRIGGER" == "$CURRENT_TRIGGER" ]]; then
-            continue
-          fi
-
-          LATEST_BUILD=$(gcloud builds list --region=asia-south1 \
-            --filter="substitutions.TRIGGER_NAME=$TRIGGER" \
-            --sort-by="~createTime" --limit=1 \
-            --format="value(id,status,createTime)")
-
-          if [[ -z "$LATEST_BUILD" ]]; then
-            echo "ℹ️ No previous build found for $TRIGGER. Skipping."
-            continue
-          fi
-
-          BUILD_ID=$(echo "$LATEST_BUILD" | awk '{print $1}')
-          STATUS=$(echo "$LATEST_BUILD" | awk '{print $2}')
-          BUILDTIME=$(echo "$LATEST_BUILD" | awk '{print $3}')
-
-          echo "➡️ Latest build for $TRIGGER: $BUILD_ID ($STATUS at $BUILDTIME)"
-
-          # Wait until the trigger completes
-          if [[ "$STATUS" == "WORKING" || "$STATUS" == "QUEUED" ]]; then
-            while true; do
-              CURRENT_STATUS=$(gcloud builds describe $BUILD_ID --region=asia-south1 --format="value(status)")
-              echo "🔄 $TRIGGER build $BUILD_ID status: $CURRENT_STATUS"
-              if [[ "$CURRENT_STATUS" == "SUCCESS" || "$CURRENT_STATUS" == "FAILURE" || "$CURRENT_STATUS" == "CANCELLED" ]]; then
-                STATUS=$CURRENT_STATUS
-                break
-              fi
-              echo "⏱ Sleeping 15 seconds before checking again..."
-              sleep 15
-            done
-          fi
-
-          # Wait after build based on status
-          if [[ "$STATUS" == "SUCCESS" ]]; then
-            echo "✅ $TRIGGER succeeded. Waiting 90 seconds before continuing..."
+          if [[ "$$STATUS" == "SUCCESS" ]]; then
+            echo "✅ $$TRIGGER_NAME succeeded. Waiting 90 seconds..."
             sleep 90
-          elif [[ "$STATUS" == "FAILURE" || "$STATUS" == "CANCELLED" ]]; then
-            echo "⚠️ $TRIGGER failed/cancelled. Waiting 30 seconds before continuing..."
+          else
+            echo "⚠️ $$TRIGGER_NAME failed/cancelled. Waiting 30 seconds..."
             sleep 30
           fi
+        }
 
-          # Re-check ongoing builds before moving to next trigger
-          wait_for_no_running_builds
+        # Wait for all earlier triggers
+        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
+          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
+            continue
+          fi
+          BUILD_INFO=$$(gcloud builds list --region=asia-south1 \
+            --filter="substitutions.TRIGGER_NAME=$$TRIGGER" \
+            --sort-by="~createTime" --limit=1 \
+            --format="value(id,createTime,status)")
+          if [[ -z "$$BUILD_INFO" ]]; then
+            echo "ℹ️ No previous build found for $$TRIGGER, skipping."
+            continue
+          fi
+          BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
+          BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
+          BUILD_STATUS=$$(echo "$$BUILD_INFO" | awk '{print $$3}')
+
+          if [[ "$$BUILD_START" < "$$CURRENT_START_TIME" ]]; then
+            echo "⏳ $$TRIGGER started before current build at $$BUILD_START (status: $$BUILD_STATUS)"
+            if [[ "$$BUILD_STATUS" == "WORKING" || "$$BUILD_STATUS" == "QUEUED" ]]; then
+              wait_for_build "$$TRIGGER" "$$BUILD_ID"
+            else
+              if [[ "$$BUILD_STATUS" == "SUCCESS" ]]; then
+                echo "✅ $$TRIGGER already succeeded. Waiting 90 seconds..."
+                sleep 90
+              else
+                echo "⚠️ $$TRIGGER already failed/cancelled. Waiting 30 seconds..."
+                sleep 30
+              fi
+            fi
+          fi
         done
 
-  # Step 2: Docker Build
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      [
-        'build', '-t',
-        'asia-south1-docker.pkg.dev/divine-course-470809-f6/deploy-to-cloudrun/cloudrun-app:latest',
-        '.'
-      ]
+      ['build', '-t', 'asia-south1-docker.pkg.dev/divine-course-470809-f6/deploy-to-cloudrun/cloudrun-app:latest', '.']
 
-  # Step 3: Docker Push
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      [
-        'push',
-        'asia-south1-docker.pkg.dev/divine-course-470809-f6/deploy-to-cloudrun/cloudrun-app:latest'
-      ]
+      ['push', 'asia-south1-docker.pkg.dev/divine-course-470809-f6/deploy-to-cloudrun/cloudrun-app:latest']
 
 timeout: 1200s
 options:
