--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -184,4 +184,4 @@ substitutions:
   _TRIGGER_NAME: "trigger-2"
   _MIG_NAME: "vamsi-mig"
   _ZONE: "asia-east1"
-  _GITHUB_REPO: "https://github.com/20481A04K2/repo2.git"
+  _GITHUB_REPO: "20481A04K2/repo2"
